@@ -2,3 +2,4 @@
 [CHANGE] For iOS 11 and greater: added some smarts to improve layout of left navigation bar buttons when a back button is showing.
 [CHANGE] IFAMapViewController now uses IFALocationAuthorizationTypeWhenInUse as the default value for the locationAuthorizationType property.
 [FIX] Fixed issues with documentation in IFALocationManager.h.
+[FIX] Fixed bug in the performLocationServicesChecksWithAlertPresenterViewController: method in IFALocationManager that caused the incorrect error message to be displayed in some situations.
